traffic/k8s/deployment-app-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
  namespace: traffic
  labels:
    app: app
    version: v1
spec:
  selector:
    matchLabels:
      app: app
      version: v1
  template:
    metadata:
      labels:
        app: app
        version: v1
    spec:
      containers:
      - name: app
        image: algab/poc-istio-traffic-app:1.0
        resources:
          limits:
            memory: "80Mi"
            cpu: "200m"
        ports:
        - containerPort: 3000
