traffic/k8s/service-app-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app-v1
  namespace: traffic
spec:
  selector:
    app: app
    version: v1
  ports:
    - port: 80
      targetPort: 3000
