traffic/k8s/service-app-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app-v2
  namespace: traffic
spec:
  selector:
    app: app
    version: v2
  ports:
    - port: 80
      targetPort: 3000
